# Task_Manager

./: Cargo.toml  Experimental_pulse.rs  Pulse_not_working_graphs.rs  README.md  csv_export.rs  get_OS.rs  get_ps.rs  help.rs  json_export.rs  just in case.rs  main.rs  pause_resume.rs  priority.rs  process_groups.rs  pulse.rs  pulse1.rs  reptyr.rs  restart.rs
