[package]
name = "process_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30"
chrono = "0.4"
users = "0.11"
crossterm = "0.27"
ctrlc = "3.4"
termion = "1.5"
signal-hook = "0.3"
libc = "0.2"
nix = "0.26"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



